manifest/jenkins/jenkins-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-test
spec:
  selector:
    app: jenkins-test
  ports:
    - name: http-service
      port: 8080
      targetPort: http-service
    - name: http-agent
      port: 50000
      targetPort: http-agent
  type: NodePort
  externalIPs:
    - 192.168.220.131
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-test
  template:
    metadata:
      labels:
        app: jenkins-test
    spec:
      serviceAccountName: jenkins
      containers:
        - name: jenkins
          image: jenkins/jenkins:2.316-jdk11
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          ports:
            - name: http-service
              containerPort: 8080 # 서비스
            - name: http-agent
              containerPort: 50000 # Master-Slave 노드 간 통신
          readinessProbe:
            httpGet:
              path: /login
              port: http-service
            initialDelaySeconds: 30
            failureThreshold: 5
            periodSeconds: 5
            timeoutSeconds: 5
          volumeMounts:
            - name: jenkins-volume
              mountPath: /var/jenkins_home
      volumes:
        - name: jenkins-volume
          emptyDir: {}
