manifest/jenkins/jenkins.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
  selector:
    app: jenkins
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: http-agent
      port: 50000
      targetPort: http-agent
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/jenkins
                    operator: Exists
      tolerations:
        - key: "node-role.kubernetes.io/jenkins"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: jenkins
          image: jenkins/jenkins:2.327-jdk11
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          ports:
            - name: http
              containerPort: 8080 # 서비스
            - name: http-agent
              containerPort: 50000 # Master-Slave 노드 간 통신
          readinessProbe:
            httpGet:
              path: /login
              port: http
            initialDelaySeconds: 30
            failureThreshold: 5
            periodSeconds: 5
            timeoutSeconds: 5
          resources:
            limits:
              cpu: "1000m"
              memory: 1Gi
            requests:
              cpu: "1000m"
              memory: 1Gi
          volumeMounts:
            # jenkins 볼륨
            - name: jenkins-volume
              mountPath: /var/jenkins_home
            # jenkins seed job pre-install
            - name: jenkins-seed-job
              mountPath: /usr/share/jenkins/ref/jobs/seed
            # github token 값
            - name: jenkins-cred
              mountPath: /run/secrets/github-token
              subPath: github-token
              readOnly: true
            # slack token 값
            - name: jenkins-cred
              mountPath: /run/secrets/slack-token
              subPath: slack-token
              readOnly: true
            # dockerhub 토큰
            - name: jenkins-cred
              mountPath: /run/secrets/dockerhub-token
              subPath: dockerhub-token
              readOnly: true
      # 플러그인 사전 설치, Config as Code(JCasC) 파일 다운로드, seed job config.xml 다운로드
      volumes:
        - name: jenkins-volume
          emptyDir: {}
        - name: jenkins-seed-job
          emptyDir: {}
        - name: jenkins-cred
          secret:
            secretName: jenkins-cred
