manifest/jenkins/istio-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jenkins-route
spec:
  hosts:
    - "jenkins.choshsh.com"
  gateways:
    - default/choshsh-gateway
  http:
    - name: "jenkins-http"
      match:
        - port: 80
      route:
        - destination:
            host: jenkins.jenkins.svc.cluster.local
            subset: v2
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: jenkins
spec:
  host: jenkins
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
  subsets:
    - name: v2
      labels:
        version: v2
      trafficPolicy:
        loadBalancer:
          simple: ROUND_ROBIN
