manifest/jenkins/jenkins-network.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jenkins
spec:
  hosts:
    - "jenkins.choshsh.com"
  gateways:
    - default/choshsh-gateway
  http:
    - name: "jenkins"
      route:
        - destination:
            host: jenkins
            subset: jenkins-subset
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: jenkins
spec:
  host: jenkins
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
    - name: jenkins-subset
      labels:
        app: jenkins
